# ai-bootcamp

./: main.py  pyproject.toml
01-semantic-layer/: examples.sql  howto.md  marts.yml  sources.yml
02-custom-mcp/postgres-mcp-server/: README.md  main.py
03-data-cleaning-agent/: .env.example  .gitignore  AGENTS.md  README.md
03-data-cleaning-agent-2/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README_original.md  app.py  render.yaml  requirements.txt
03-data-cleaning-agent-2/data/: sample_data.csv
03-data-cleaning-agent-2/data_cleaning_agent/: __init__.py  data_cleaning_agent.py  test.ipynb  utils.py
03-data-cleaning-agent/data/: missing.csv  missing_and_outliers.csv  outliers.csv
03-data-cleaning-agent/workflows/: simple_clean_data_workflow.py
04-stateful-workflows/: .gitignore  README.md  example_usage.py  main.py  pyproject.toml
04-stateful-workflows-2/: .env.example  .gitignore  README.md  example_usage.py  pyproject.toml
04-stateful-workflows-2/data_analyst_agent/: __init__.py  guardrails.py  orchestrator.py  orchestrator_reference.py
04-stateful-workflows/eda_workflow/: eda_workflow.py
04-stateful-workflows/eda_workflow/prompts/: extract_observations_human.txt  extract_observations_system.txt  synthesize_findings_human.txt  synthesize_findings_system.txt
05-agentic-system/: .env.example  .gitignore  README.md  pandasai_quickstart_guide.ipynb  pyproject.toml
05-system-design/: README.md
06-slackbot/: .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
06-slackbot/scripts/: create_datasets.py
06-slackbot/slackbot/: main.py
06-slackbot/slackbot/engine/: analyst.py  cache.py  memory.py  resolver.py
06-slackbot/slackbot/intake/: guardrails.py  refiner.py  router.py
06-slackbot/slackbot/output/: formatter.py  insights.py  logger.py  suggestions.py
