[project]
name = "ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
]
