[tool.poetry]
name = "data-analyst-agent"
version = "0.1.0"
description = "Minimal LangGraph orchestration for DataAnalystAgent: data_cleaning_agent then EDAWorkflow"
authors = ["Andres Vourakis"]
readme = "README.md"
packages = [{ include = "data_analyst_agent" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.0"
langgraph = "~0.2.0"
langchain = "~0.3.0"
langchain-openai = "~0.2.0"
python-dotenv = "^1.0.0"
data-cleaning-agent = { path = "../03-data-cleaning-agent-2/data-cleaning-agent", develop = true }
eda-workflow = { path = "../04-stateful-workflows/eda-workflow", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "pandas>=3.0.1",
]
