[project]
name = "slackbot"
version = "0.1.0"
description = "Talk-to-Your-Data Slackbot — natural language data analysis via Slack"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "slack-bolt>=1.18.0",
    "pandas>=2.0.0",
    "pandasai>=3.0.0",
    "pandasai-litellm>=0.0.1",
    "pandasai-sql>=0.1.7",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
